Fix CSS layout overflow

--- a/sass/components/_digitalshelf.scss
+++ b/sass/components/_digitalshelf.scss
@@ -13,7 +13,7 @@
 
 .column {
   display: inline-block;
-  margin: 1.5%;
+  margin: 1%;
   width: 30%;
   text-align: center;
   font: .9em/1.5 $base-font;
